# 10060-Physics

./: .gitignore  README.md  eksamen_2024.ipynb  environment.yml  flake.nix  pyproject.toml  shell.nix
.direnv/: flake-profile-3-link  flake-profile-6-link
exams/: PV-diagrammer.md  assignments.ipynb  keplers_law.md
fall/Electromagnetism1/: E25__07__elektriske_ladninger_felter__10060__alec.pptx  assignments.ipynb
fall/Electromagnetism2/: assignments.ipynb
fall/Electromagnetism3/: assignments.ipynb
fall/Electromagnetism4/: assignments.ipynb
fall/Electromagnetism5/: E25__11__elektromagneter_og_induktion__10060__alec(1).pptx  assignments.ipynb
fall/Electromagnetism6/: assignments.ipynb
fall/Gravitation/: E25__06__gravitation__10060__alec.pptx  Problems in Gravitation.ipynb  assignments.ipynb
fall/Thermodynamics1/: assignments.ipynb
fall/Thermodynamics2/: assignments.ipynb
fall/Thermodynamics3/: assignments.ipynb
fall/Thermodynamics4/: assignments.ipynb
fall/Thermodynamics5/: assignments.ipynb
fall/forsøg3/: analysis.ipynb
fall/forsøg4/: analysis.ipynb
spring/Forces1/: Newtons laws notebook.ipynb  assignments.ipynb
spring/Kinematics-1D/: Kinematics1D notebook.ipynb  assignments.ipynb
spring/Kinematics-2D/: Kinematics 2D notebook.ipynb  assignments.ipynb
spring/collisions/: assignments.ipynb
spring/energy-conservation/: assignments.ipynb
spring/equations-of-motion/: Simulation Problems.ipynb  Simulation notebook.ipynb
spring/experiments/: Problems in experiments.ipynb  Problems in uncertainty.ipynb  Uncertainties notebook.ipynb
(+67 files in other folders)
