[project]
name = "fysik"
version = "0.1.0"
description = "Native Nix environment for 10060-Physics"
authors = [
    {name = "Chris"},
]
requires-python = "~3.12"
dependencies = [
  # Jupyter Essentials
  "jupyterlab",
  "ipykernel",

  # Your Packages
  "sympy",
  "numpy",
  "pandas",
  "matplotlib",
  "pint",
  "uncertainties",
  "scipy",
]
